--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
     <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-all -->
     <dependency>
       <groupId>org.ow2.asm</groupId>
-      <artifactId>asm-all</artifactId>
-      <version>5.0.3</version>
+      <artifactId>asm-debug-all</artifactId>
+      <version>5.2</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/net.sf.trove4j/trove4j -->
     <dependency>
