--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,22 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>net.revelc.code.formatter</groupId>
+        <artifactId>formatter-maven-plugin</artifactId>
+        <version>2.10.0</version>
+        <configuration>
+          <configFile>${project.basedir}/eclipse/formatter.xml</configFile>
+          <excludes>
+            <exclude>soba/testdata/</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-all -->
     <dependency>
